update lm notebook style (#65)

--- a/docs/examples/language_model.ipynb
+++ b/docs/examples/language_model.ipynb
@@ -247,10 +247,13 @@
     "        total_L, n_total = 0.0, 0\n",
     "        start_epoch_time = time.time()\n",
     "        start_log_interval_time = time.time()\n",
-    "        hiddens = [model.begin_state(batch_size//len(context), func=mx.nd.zeros, ctx=ctx) for ctx in context]\n",
+    "        hiddens = [model.begin_state(batch_size//len(context), func=mx.nd.zeros, ctx=ctx) \n",
+    "                   for ctx in context]\n",
     "        for i, (data, target) in enumerate(train_data):\n",
-    "            data_list = gluon.utils.split_and_load(data, context, batch_axis=1, even_split=True)\n",
-    "            target_list = gluon.utils.split_and_load(target, context, batch_axis=1, even_split=True)\n",
+    "            data_list = gluon.utils.split_and_load(data, context, \n",
+    "                                                   batch_axis=1, even_split=True)\n",
+    "            target_list = gluon.utils.split_and_load(target, context, \n",
+    "                                                     batch_axis=1, even_split=True)\n",
     "            hiddens = detach(hiddens)\n",
     "            L = 0\n",
     "            Ls = []\n",
@@ -272,8 +275,9 @@
     "\n",
     "            if i % log_interval == 0 and i > 0:\n",
     "                cur_L = total_L / n_total\n",
-    "                print('[Epoch %d Batch %d/%d] loss %.2f, ppl %.2f, throughput %.2f samples/s'%(\n",
-    "                    epoch, i, len(train_data), cur_L, math.exp(cur_L),\n",
+    "                print('[Epoch %d Batch %d/%d] loss %.2f, ppl %.2f, '\n",
+    "                      'throughput %.2f samples/s'%(\n",
+    "                    epoch, i, len(train_data), cur_L, math.exp(cur_L), \n",
     "                    batch_size * log_interval / (time.time() - start_log_interval_time)))\n",
     "                total_L, n_total = 0.0, 0\n",
     "                start_log_interval_time = time.time()\n",
@@ -297,7 +301,8 @@
     "            trainer.set_learning_rate(lr)\n",
     "\n",
     "    print('Total training throughput %.2f samples/s'%(\n",
-    "                            (batch_size * len(train_data) * epochs) / (time.time() - start_train_time)))"
+    "                            (batch_size * len(train_data) * epochs) / \n",
+    "                            (time.time() - start_train_time)))"
    ]
   },
   {
