Numerous doc updates (#66)

--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -471,7 +471,7 @@
     "- Gluon NLP Toolkit provides high-level APIs that could drastically simplify the development process of modeling for NLP tasks.\n",
     "- Low-level APIs in NLP Toolkit enables easy customization.\n",
     "\n",
-    "Documentation can be found at http://gluon-nlp.s3-accelerate.dualstack.amazonaws.com/index.html"
+    "Documentation can be found at http://gluon-nlp.mxnet.io/index.html"
    ]
   }
  ],
