--- a/docs/examples/sentiment_analysis/sentiment_analysis.ipynb
+++ b/docs/examples/sentiment_analysis/sentiment_analysis.ipynb
@@ -515,7 +515,7 @@
     "\n",
     "3) fast to build the NLP prototype.\n",
     "\n",
-    "Gluonnlp documentation is here: http://gluon-nlp.s3-accelerate.dualstack.amazonaws.com/index.html"
+    "Gluonnlp documentation is here: http://gluon-nlp.mxnet.io/index.html"
    ]
   }
  ],
