Fix language model ipynb (#83)
* Fix language model ipynb

* Doc fix in word_embedding.ipynb

* Fix wemb eval paths

* Fix warning

* Rerun language_model.ipynb

--- a/docs/examples/word_embedding/word_embedding.ipynb
+++ b/docs/examples/word_embedding/word_embedding.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To attach word embedding to indexed words in `vocab`, let us go on to create a fastText word embedding instance by specifying the embedding name `fasttext` and the source name `wiki.simple.vec`."
+    "To attach word embedding to indexed words in `vocab`, let us go on to create a fastText word embedding instance by specifying the embedding name `fasttext` and the source name `wiki.simple`."
    ]
   },
   {
