--- a/docs/examples/word_embedding_evaluation/word_embedding_evaluation.ipynb
+++ b/docs/examples/word_embedding_evaluation/word_embedding_evaluation.ipynb
@@ -479,7 +479,7 @@
     "pd.options.display.max_rows = 999\n",
     "pd.options.display.precision = 3\n",
     "\n",
-    "df = pd.read_table(\"../../scripts/word_embedding_evaluation/results-vocablimit.csv\",\n",
+    "df = pd.read_table(\"../../../scripts/word_embedding_evaluation/results-vocablimit.csv\",\n",
     "                   header=None, names=[\n",
     "                       \"evaluation_type\", \"dataset\", \"kwargs\", \"embedding_name\",\n",
     "                       \"embedding_source\", \"evaluation\", \"value\", \"num_samples\"\n",
