--- a/scripts/word_embedding_evaluation/extended_results.ipynb
+++ b/scripts/word_embedding_evaluation/extended_results.ipynb
@@ -7024,6 +7024,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "nbsphinx": {
+   "orphan": true
   }
  },
  "nbformat": 4,
