Revert "Don't treat language model datasets special (#128)"
This reverts commit ad1e6cdc3cd1edd15daf3a14086de70f6c208788.

--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -107,10 +107,10 @@
     "                                                               skip_empty=False)\n",
     "                                            for segment in ['train', 'val', 'test']]\n",
     "\n",
-    "vocab = nlp.Vocab(nlp.data.Counter(train_dataset), padding_token=None, bos_token=None)\n",
+    "vocab = nlp.Vocab(nlp.data.Counter(train_dataset[0]), padding_token=None, bos_token=None)\n",
     "\n",
-    "bptt_batchify = nlp.data.batchify.LanguageModelBPTT(vocab, batch_size, bptt, last_batch='discard')\n",
-    "train_data, val_data, test_data = [bptt_batchify(x)\n",
+    "train_data, val_data, test_data = [x.bptt_batchify(vocab, bptt, batch_size,\n",
+    "                                                   last_batch='discard')\n",
     "                                   for x in [train_dataset, val_dataset, test_dataset]]"
    ]
   },
@@ -323,37 +323,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0 Batch 100/745] loss 8.03, ppl 3065.94, throughput 1715.26 samples/s\n",
-      "[Epoch 0 Batch 200/745] loss 7.25, ppl 1403.39, throughput 1772.06 samples/s\n",
-      "[Epoch 0 Batch 300/745] loss 6.94, ppl 1033.97, throughput 1785.40 samples/s\n",
-      "[Epoch 0 Batch 400/745] loss 6.67, ppl 787.56, throughput 1786.35 samples/s\n",
-      "[Epoch 0 Batch 500/745] loss 6.48, ppl 649.69, throughput 1786.77 samples/s\n",
-      "[Epoch 0 Batch 600/745] loss 6.31, ppl 550.47, throughput 1779.51 samples/s\n",
-      "[Epoch 0 Batch 700/745] loss 6.20, ppl 492.56, throughput 1776.04 samples/s\n",
-      "[Epoch 0] throughput 1774.25 samples/s\n",
-      "[Epoch 0] time cost 36.75s, valid loss 5.94, valid ppl 378.13\n",
+      "[Epoch 0 Batch 100/745] loss 8.03, ppl 3065.94, throughput 1697.82 samples/s\n",
+      "[Epoch 0 Batch 200/745] loss 7.25, ppl 1403.39, throughput 1734.12 samples/s\n",
+      "[Epoch 0 Batch 300/745] loss 6.94, ppl 1033.97, throughput 1746.13 samples/s\n",
+      "[Epoch 0 Batch 400/745] loss 6.67, ppl 787.56, throughput 1757.77 samples/s\n",
+      "[Epoch 0 Batch 500/745] loss 6.48, ppl 649.69, throughput 1751.55 samples/s\n",
+      "[Epoch 0 Batch 600/745] loss 6.31, ppl 550.47, throughput 1758.80 samples/s\n",
+      "[Epoch 0 Batch 700/745] loss 6.20, ppl 492.56, throughput 1757.13 samples/s\n",
+      "[Epoch 0] throughput 1744.91 samples/s\n",
+      "[Epoch 0] time cost 37.30s, valid loss 5.94, valid ppl 378.13\n",
       "test loss 5.86, test ppl 352.40\n",
-      "[Epoch 1 Batch 100/745] loss 6.08, ppl 439.13, throughput 1771.13 samples/s\n",
-      "[Epoch 1 Batch 200/745] loss 5.99, ppl 399.40, throughput 1791.90 samples/s\n",
-      "[Epoch 1 Batch 300/745] loss 5.93, ppl 377.05, throughput 1790.47 samples/s\n",
-      "[Epoch 1 Batch 400/745] loss 5.88, ppl 356.80, throughput 1791.31 samples/s\n",
-      "[Epoch 1 Batch 500/745] loss 5.77, ppl 320.72, throughput 1778.47 samples/s\n",
-      "[Epoch 1 Batch 600/745] loss 5.69, ppl 296.44, throughput 1789.30 samples/s\n",
-      "[Epoch 1 Batch 700/745] loss 5.62, ppl 276.54, throughput 1781.07 samples/s\n",
-      "[Epoch 1] throughput 1785.87 samples/s\n",
-      "[Epoch 1] time cost 36.54s, valid loss 5.55, valid ppl 255.98\n",
+      "[Epoch 1 Batch 100/745] loss 6.08, ppl 439.13, throughput 1725.42 samples/s\n",
+      "[Epoch 1 Batch 200/745] loss 5.99, ppl 399.40, throughput 1751.87 samples/s\n",
+      "[Epoch 1 Batch 300/745] loss 5.93, ppl 377.05, throughput 1743.20 samples/s\n",
+      "[Epoch 1 Batch 400/745] loss 5.88, ppl 356.80, throughput 1746.66 samples/s\n",
+      "[Epoch 1 Batch 500/745] loss 5.77, ppl 320.72, throughput 1752.17 samples/s\n",
+      "[Epoch 1 Batch 600/745] loss 5.69, ppl 296.44, throughput 1751.97 samples/s\n",
+      "[Epoch 1 Batch 700/745] loss 5.62, ppl 276.54, throughput 1752.15 samples/s\n",
+      "[Epoch 1] throughput 1747.56 samples/s\n",
+      "[Epoch 1] time cost 37.31s, valid loss 5.55, valid ppl 255.98\n",
       "test loss 5.46, test ppl 236.26\n",
-      "[Epoch 2 Batch 100/745] loss 5.62, ppl 274.64, throughput 1774.99 samples/s\n",
-      "[Epoch 2 Batch 200/745] loss 5.55, ppl 257.08, throughput 1783.87 samples/s\n",
-      "[Epoch 2 Batch 300/745] loss 5.52, ppl 248.41, throughput 1783.25 samples/s\n",
-      "[Epoch 2 Batch 400/745] loss 5.50, ppl 245.33, throughput 1787.02 samples/s\n",
-      "[Epoch 2 Batch 500/745] loss 5.41, ppl 223.72, throughput 1798.73 samples/s\n",
-      "[Epoch 2 Batch 600/745] loss 5.35, ppl 210.89, throughput 1785.37 samples/s\n",
-      "[Epoch 2 Batch 700/745] loss 5.32, ppl 204.93, throughput 1793.54 samples/s\n",
-      "[Epoch 2] throughput 1788.93 samples/s\n",
-      "[Epoch 2] time cost 36.48s, valid loss 5.27, valid ppl 195.28\n",
+      "[Epoch 2 Batch 100/745] loss 5.62, ppl 274.64, throughput 1740.72 samples/s\n",
+      "[Epoch 2 Batch 200/745] loss 5.55, ppl 257.08, throughput 1761.69 samples/s\n",
+      "[Epoch 2 Batch 300/745] loss 5.52, ppl 248.41, throughput 1744.27 samples/s\n",
+      "[Epoch 2 Batch 400/745] loss 5.50, ppl 245.33, throughput 1744.38 samples/s\n",
+      "[Epoch 2 Batch 500/745] loss 5.41, ppl 223.72, throughput 1762.50 samples/s\n",
+      "[Epoch 2 Batch 600/745] loss 5.35, ppl 210.89, throughput 1753.80 samples/s\n",
+      "[Epoch 2 Batch 700/745] loss 5.32, ppl 204.93, throughput 1747.81 samples/s\n",
+      "[Epoch 2] throughput 1753.63 samples/s\n",
+      "[Epoch 2] time cost 37.19s, valid loss 5.27, valid ppl 195.28\n",
       "test loss 5.19, test ppl 179.94\n",
-      "Total training throughput 1457.25 samples/s\n"
+      "Total training throughput 1453.99 samples/s\n"
      ]
     }
    ],
@@ -379,13 +379,13 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 4982k  100 4982k    0     0  22.4M      0 --:--:-- --:--:-- --:--:-- 22.4M\n",
+      "100 4982k  100 4982k    0     0  24.0M      0 --:--:-- --:--:-- --:--:-- 23.9M\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  390k  100  390k    0     0  4337k      0 --:--:-- --:--:-- --:--:-- 4386k\n",
+      "100  390k  100  390k    0     0  4539k      0 --:--:-- --:--:-- --:--:-- 4539k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  439k  100  439k    0     0  4529k      0 --:--:-- --:--:-- --:--:-- 4529k\n",
+      "100  439k  100  439k    0     0  4993k      0 --:--:-- --:--:-- --:--:-- 4993k\n",
       "['ptb.test.txt', 'ptb.train.txt', 'ptb.valid.txt']\n"
      ]
     }
@@ -400,33 +400,16 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package perluniprops to\n",
-      "[nltk_data]     /home/ubuntu/nltk_data...\n",
-      "[nltk_data]   Package perluniprops is already up-to-date!\n",
-      "[nltk_data] Downloading package nonbreaking_prefixes to\n",
-      "[nltk_data]     /home/ubuntu/nltk_data...\n",
-      "[nltk_data]   Package nonbreaking_prefixes is already up-to-date!\n",
-      "[nltk_data] Downloading package punkt to /home/ubuntu/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import nltk\n",
-    "nltk.download(['perluniprops', 'nonbreaking_prefixes', 'punkt'])\n",
     "moses_tokenizer = nlp.data.NLTKMosesTokenizer()\n",
     "\n",
-    "ptb_val = nlp.data.CorpusDataset('ptb.valid.txt',\n",
-    "                                    flatten=True,\n",
-    "                                    sample_splitter=nltk.tokenize.sent_tokenize,\n",
-    "                                    tokenizer=moses_tokenizer, eos='<eos>')\n",
+    "ptb_val = nlp.data.LanguageModelDataset('ptb.valid.txt',\n",
+    "                                        sample_splitter=nltk.tokenize.sent_tokenize,\n",
+    "                                        tokenizer=moses_tokenizer, eos='<eos>')\n",
     "\n",
-    "ptb_val_data = nlp.data.batchify.LanguageModelBPTT(vocab, batch_size, bptt, last_batch='discard')(ptb_val)"
+    "ptb_val_data = ptb_val.bptt_batchify(vocab, bptt, batch_size, last_batch='discard')"
    ]
   },
   {
@@ -456,16 +439,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0] throughput 1409.67 samples/s\n",
-      "[Epoch 0] time cost 2.49s, valid loss 5.80, valid ppl 329.53\n",
+      "[Epoch 0] throughput 1734.68 samples/s\n",
+      "[Epoch 0] time cost 2.19s, valid loss 5.80, valid ppl 329.53\n",
       "test loss 5.80, test ppl 329.53\n",
-      "[Epoch 1] throughput 1764.51 samples/s\n",
-      "[Epoch 1] time cost 2.13s, valid loss 5.75, valid ppl 313.96\n",
+      "[Epoch 1] throughput 1707.44 samples/s\n",
+      "[Epoch 1] time cost 2.21s, valid loss 5.75, valid ppl 313.96\n",
       "test loss 5.75, test ppl 313.96\n",
-      "[Epoch 2] throughput 1763.15 samples/s\n",
-      "[Epoch 2] time cost 2.13s, valid loss 4.91, valid ppl 135.13\n",
+      "[Epoch 2] throughput 1715.08 samples/s\n",
+      "[Epoch 2] time cost 2.17s, valid loss 4.91, valid ppl 135.13\n",
       "test loss 4.91, test ppl 135.13\n",
-      "Total training throughput 608.55 samples/s\n"
+      "Total training throughput 553.33 samples/s\n"
      ]
     }
    ],
