Update language and embedding notebooks (#161)
Update language model and embedding notebooks

--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -11,18 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will go through an example of using Gluon NLP Toolkit to define language model architecture, and train a standard LSTM language model; and use the pre-trained state-of-the-art languague models in Gluon NLP Toolkit."
+    "In this notebook, we will go through an example of using Gluon NLP Toolkit to 1) define language model architecture, and train a standard LSTM language model; 2) use your own dataset to train the model; 3) and use the pre-trained state-of-the-art languague models in Gluon NLP Toolkit."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Language model definition - one sentence\n",
+    "\n",
+    "Language model is trying to predict the next word based on the previous ones.\n",
+    "\n",
+    "<div style=\"width: 500px;\">![language-model-intro](language_model_intro.png)</div>\n",
+    "\n",
     "## Train your own language model\n",
-    "\n",
-    "We train the model using truncated [back-propagation-through-time (BPTT)](https://en.wikipedia.org/wiki/Backpropagation_through_time)\n",
-    "\n",
-    "<div style=\"width: 500px;\">![bptt](https://upload.wikimedia.org/wikipedia/commons/e/ee/Unfold_through_time.png)</div>\n",
     "\n",
     "### Preparation"
    ]
@@ -235,7 +237,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Training loop"
+    "#### Training loop\n",
+    "\n",
+    "We train the model using truncated [back-propagation-through-time (BPTT)](https://en.wikipedia.org/wiki/Backpropagation_through_time) . We backpropagate\n",
+    "for 35 time steps using stochastic gradient descent with the learning rate.\n",
+    "\n",
+    "<div style=\"width: 500px;\">![bptt](https://upload.wikimedia.org/wikipedia/commons/e/ee/Unfold_through_time.png)</div>"
    ]
   },
   {
@@ -325,58 +332,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0 Batch 200/2983] loss 7.64, ppl 2089.79, throughput 451.04 samples/s\n",
-      "[Epoch 0 Batch 400/2983] loss 6.76, ppl 861.82, throughput 462.72 samples/s\n",
-      "[Epoch 0 Batch 600/2983] loss 6.36, ppl 576.54, throughput 484.20 samples/s\n",
-      "[Epoch 0 Batch 800/2983] loss 6.19, ppl 485.45, throughput 470.85 samples/s\n",
-      "[Epoch 0 Batch 1000/2983] loss 6.05, ppl 422.70, throughput 453.69 samples/s\n",
-      "[Epoch 0 Batch 1200/2983] loss 5.97, ppl 392.23, throughput 478.80 samples/s\n",
-      "[Epoch 0 Batch 1400/2983] loss 5.86, ppl 351.95, throughput 465.91 samples/s\n",
-      "[Epoch 0 Batch 1600/2983] loss 5.86, ppl 351.32, throughput 473.88 samples/s\n",
-      "[Epoch 0 Batch 1800/2983] loss 5.70, ppl 300.08, throughput 466.90 samples/s\n",
-      "[Epoch 0 Batch 2000/2983] loss 5.68, ppl 291.49, throughput 477.90 samples/s\n",
-      "[Epoch 0 Batch 2200/2983] loss 5.57, ppl 261.19, throughput 472.12 samples/s\n",
-      "[Epoch 0 Batch 2400/2983] loss 5.57, ppl 263.48, throughput 472.51 samples/s\n",
-      "[Epoch 0 Batch 2600/2983] loss 5.56, ppl 260.52, throughput 467.92 samples/s\n",
-      "[Epoch 0 Batch 2800/2983] loss 5.46, ppl 234.16, throughput 454.32 samples/s\n",
-      "[Epoch 0] throughput 468.93 samples/s\n",
-      "[Epoch 0] time cost 140.68s, valid loss 5.42, valid ppl 225.54\n",
+      "[Epoch 0 Batch 200/2983] loss 7.64, ppl 2089.79, throughput 446.54 samples/s\n",
+      "[Epoch 0 Batch 400/2983] loss 6.76, ppl 861.82, throughput 482.69 samples/s\n",
+      "[Epoch 0 Batch 600/2983] loss 6.36, ppl 576.54, throughput 460.25 samples/s\n",
+      "[Epoch 0 Batch 800/2983] loss 6.19, ppl 485.45, throughput 468.98 samples/s\n",
+      "[Epoch 0 Batch 1000/2983] loss 6.05, ppl 422.70, throughput 468.24 samples/s\n",
+      "[Epoch 0 Batch 1200/2983] loss 5.97, ppl 392.23, throughput 468.28 samples/s\n",
+      "[Epoch 0 Batch 1400/2983] loss 5.86, ppl 351.95, throughput 470.69 samples/s\n",
+      "[Epoch 0 Batch 1600/2983] loss 5.86, ppl 351.32, throughput 474.85 samples/s\n",
+      "[Epoch 0 Batch 1800/2983] loss 5.70, ppl 300.08, throughput 463.90 samples/s\n",
+      "[Epoch 0 Batch 2000/2983] loss 5.68, ppl 291.49, throughput 478.27 samples/s\n",
+      "[Epoch 0 Batch 2200/2983] loss 5.57, ppl 261.19, throughput 461.97 samples/s\n",
+      "[Epoch 0 Batch 2400/2983] loss 5.57, ppl 263.48, throughput 467.90 samples/s\n",
+      "[Epoch 0 Batch 2600/2983] loss 5.56, ppl 260.52, throughput 466.79 samples/s\n",
+      "[Epoch 0 Batch 2800/2983] loss 5.46, ppl 234.16, throughput 483.88 samples/s\n",
+      "[Epoch 0] throughput 468.60 samples/s\n",
+      "[Epoch 0] time cost 140.69s, valid loss 5.42, valid ppl 225.54\n",
       "test loss 5.33, test ppl 207.38\n",
-      "[Epoch 1 Batch 200/2983] loss 5.47, ppl 236.97, throughput 469.31 samples/s\n",
-      "[Epoch 1 Batch 400/2983] loss 5.45, ppl 232.65, throughput 476.61 samples/s\n",
-      "[Epoch 1 Batch 600/2983] loss 5.28, ppl 195.95, throughput 459.94 samples/s\n",
-      "[Epoch 1 Batch 800/2983] loss 5.30, ppl 199.59, throughput 463.81 samples/s\n",
-      "[Epoch 1 Batch 1000/2983] loss 5.27, ppl 194.16, throughput 470.58 samples/s\n",
-      "[Epoch 1 Batch 1200/2983] loss 5.27, ppl 193.64, throughput 474.03 samples/s\n",
-      "[Epoch 1 Batch 1400/2983] loss 5.27, ppl 193.52, throughput 469.20 samples/s\n",
-      "[Epoch 1 Batch 1600/2983] loss 5.32, ppl 205.30, throughput 465.46 samples/s\n",
-      "[Epoch 1 Batch 1800/2983] loss 5.19, ppl 180.18, throughput 470.46 samples/s\n",
-      "[Epoch 1 Batch 2000/2983] loss 5.21, ppl 183.12, throughput 484.74 samples/s\n",
-      "[Epoch 1 Batch 2200/2983] loss 5.11, ppl 166.26, throughput 470.72 samples/s\n",
-      "[Epoch 1 Batch 2400/2983] loss 5.15, ppl 172.44, throughput 468.55 samples/s\n",
-      "[Epoch 1 Batch 2600/2983] loss 5.16, ppl 174.59, throughput 457.56 samples/s\n",
-      "[Epoch 1 Batch 2800/2983] loss 5.08, ppl 160.55, throughput 471.03 samples/s\n",
-      "[Epoch 1] throughput 469.54 samples/s\n",
-      "[Epoch 1] time cost 140.38s, valid loss 5.16, valid ppl 173.61\n",
+      "[Epoch 1 Batch 200/2983] loss 5.47, ppl 236.97, throughput 465.12 samples/s\n",
+      "[Epoch 1 Batch 400/2983] loss 5.45, ppl 232.65, throughput 475.54 samples/s\n",
+      "[Epoch 1 Batch 600/2983] loss 5.28, ppl 195.95, throughput 470.30 samples/s\n",
+      "[Epoch 1 Batch 800/2983] loss 5.30, ppl 199.59, throughput 466.00 samples/s\n",
+      "[Epoch 1 Batch 1000/2983] loss 5.27, ppl 194.16, throughput 461.56 samples/s\n",
+      "[Epoch 1 Batch 1200/2983] loss 5.27, ppl 193.64, throughput 474.85 samples/s\n",
+      "[Epoch 1 Batch 1400/2983] loss 5.27, ppl 193.52, throughput 465.61 samples/s\n",
+      "[Epoch 1 Batch 1600/2983] loss 5.32, ppl 205.30, throughput 471.76 samples/s\n",
+      "[Epoch 1 Batch 1800/2983] loss 5.19, ppl 180.18, throughput 472.74 samples/s\n",
+      "[Epoch 1 Batch 2000/2983] loss 5.21, ppl 183.12, throughput 472.52 samples/s\n",
+      "[Epoch 1 Batch 2200/2983] loss 5.11, ppl 166.26, throughput 453.79 samples/s\n",
+      "[Epoch 1 Batch 2400/2983] loss 5.15, ppl 172.44, throughput 466.28 samples/s\n",
+      "[Epoch 1 Batch 2600/2983] loss 5.16, ppl 174.59, throughput 467.11 samples/s\n",
+      "[Epoch 1 Batch 2800/2983] loss 5.08, ppl 160.55, throughput 478.30 samples/s\n",
+      "[Epoch 1] throughput 469.13 samples/s\n",
+      "[Epoch 1] time cost 140.68s, valid loss 5.16, valid ppl 173.61\n",
       "test loss 5.08, test ppl 161.41\n",
-      "[Epoch 2 Batch 200/2983] loss 5.14, ppl 170.93, throughput 471.62 samples/s\n",
-      "[Epoch 2 Batch 400/2983] loss 5.16, ppl 173.32, throughput 479.96 samples/s\n",
-      "[Epoch 2 Batch 600/2983] loss 4.98, ppl 145.02, throughput 478.74 samples/s\n",
-      "[Epoch 2 Batch 800/2983] loss 5.02, ppl 151.83, throughput 468.21 samples/s\n",
-      "[Epoch 2 Batch 1000/2983] loss 5.01, ppl 150.59, throughput 469.77 samples/s\n",
-      "[Epoch 2 Batch 1200/2983] loss 5.02, ppl 151.78, throughput 460.91 samples/s\n",
-      "[Epoch 2 Batch 1400/2983] loss 5.04, ppl 154.65, throughput 471.93 samples/s\n",
-      "[Epoch 2 Batch 1600/2983] loss 5.11, ppl 166.48, throughput 467.39 samples/s\n",
-      "[Epoch 2 Batch 1800/2983] loss 4.99, ppl 146.91, throughput 463.04 samples/s\n",
-      "[Epoch 2 Batch 2000/2983] loss 5.02, ppl 151.34, throughput 476.09 samples/s\n",
-      "[Epoch 2 Batch 2200/2983] loss 4.92, ppl 136.65, throughput 472.88 samples/s\n",
-      "[Epoch 2 Batch 2400/2983] loss 4.96, ppl 142.54, throughput 462.99 samples/s\n",
-      "[Epoch 2 Batch 2600/2983] loss 4.98, ppl 145.22, throughput 476.11 samples/s\n",
-      "[Epoch 2 Batch 2800/2983] loss 4.91, ppl 135.03, throughput 474.76 samples/s\n",
-      "[Epoch 2] throughput 470.75 samples/s\n",
-      "[Epoch 2] time cost 140.10s, valid loss 5.06, valid ppl 158.35\n",
+      "[Epoch 2 Batch 200/2983] loss 5.14, ppl 170.93, throughput 475.49 samples/s\n",
+      "[Epoch 2 Batch 400/2983] loss 5.16, ppl 173.32, throughput 467.18 samples/s\n",
+      "[Epoch 2 Batch 600/2983] loss 4.98, ppl 145.02, throughput 470.24 samples/s\n",
+      "[Epoch 2 Batch 800/2983] loss 5.02, ppl 151.83, throughput 472.50 samples/s\n",
+      "[Epoch 2 Batch 1000/2983] loss 5.01, ppl 150.59, throughput 471.60 samples/s\n",
+      "[Epoch 2 Batch 1200/2983] loss 5.02, ppl 151.78, throughput 462.04 samples/s\n",
+      "[Epoch 2 Batch 1400/2983] loss 5.04, ppl 154.65, throughput 478.07 samples/s\n",
+      "[Epoch 2 Batch 1600/2983] loss 5.11, ppl 166.48, throughput 460.62 samples/s\n",
+      "[Epoch 2 Batch 1800/2983] loss 4.99, ppl 146.91, throughput 458.84 samples/s\n",
+      "[Epoch 2 Batch 2000/2983] loss 5.02, ppl 151.34, throughput 476.41 samples/s\n",
+      "[Epoch 2 Batch 2200/2983] loss 4.92, ppl 136.65, throughput 481.40 samples/s\n",
+      "[Epoch 2 Batch 2400/2983] loss 4.96, ppl 142.54, throughput 456.40 samples/s\n",
+      "[Epoch 2 Batch 2600/2983] loss 4.98, ppl 145.22, throughput 468.38 samples/s\n",
+      "[Epoch 2 Batch 2800/2983] loss 4.91, ppl 135.03, throughput 483.04 samples/s\n",
+      "[Epoch 2] throughput 469.38 samples/s\n",
+      "[Epoch 2] time cost 140.54s, valid loss 5.06, valid ppl 158.35\n",
       "test loss 5.00, test ppl 147.84\n",
-      "Total training throughput 383.11 samples/s\n"
+      "Total training throughput 383.09 samples/s\n"
      ]
     }
    ],
@@ -402,7 +409,7 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 33.2M  100 33.2M    0     0  1683k      0  0:00:20  0:00:20 --:--:-- 2159k\n",
+      "100 33.2M  100 33.2M    0     0  1807k      0  0:00:18  0:00:18 --:--:-- 2195k00:30 1326k\n",
       "./simple-examples/data/ptb.test.txt\n",
       "./simple-examples/data/ptb.train.txt\n",
       "./simple-examples/data/ptb.valid.txt\n",
@@ -459,16 +466,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0] throughput 475.58 samples/s\n",
-      "[Epoch 0] time cost 9.62s, valid loss 4.76, valid ppl 116.78\n",
+      "[Epoch 0] throughput 449.18 samples/s\n",
+      "[Epoch 0] time cost 9.84s, valid loss 4.76, valid ppl 116.78\n",
       "test loss 4.76, test ppl 116.78\n",
-      "[Epoch 1] throughput 456.90 samples/s\n",
-      "[Epoch 1] time cost 9.84s, valid loss 4.48, valid ppl 88.27\n",
+      "[Epoch 1] throughput 454.42 samples/s\n",
+      "[Epoch 1] time cost 9.72s, valid loss 4.48, valid ppl 88.27\n",
       "test loss 4.48, test ppl 88.27\n",
-      "[Epoch 2] throughput 451.80 samples/s\n",
-      "[Epoch 2] time cost 9.84s, valid loss 4.23, valid ppl 68.63\n",
+      "[Epoch 2] throughput 492.92 samples/s\n",
+      "[Epoch 2] time cost 9.36s, valid loss 4.23, valid ppl 68.63\n",
       "test loss 4.23, test ppl 68.63\n",
-      "Total training throughput 154.47 samples/s\n"
+      "Total training throughput 153.36 samples/s\n"
      ]
     }
    ],
@@ -727,10 +734,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Showcase with language model, we already support embedding training, sentiment analysis, beam search, and NMT in a similar easy-to-use fashion, and more is on the way.\n",
     "- Gluon NLP Toolkit provides high-level APIs that could drastically simplify the development process of modeling for NLP tasks.\n",
     "- Low-level APIs in NLP Toolkit enables easy customization.\n",
     "\n",
-    "Documentation can be found at http://gluon-nlp.mxnet.io/index.html"
+    "Documentation can be found at http://gluon-nlp.mxnet.io/index.html\n",
+    "\n",
+    "Code is here https://github.com/dmlc/gluon-nlp"
    ]
   },
   {
