fix float in sentiment analysis (#221)
* fix float

* fix pylint

--- a/docs/examples/sentiment_analysis/sentiment_analysis.ipynb
+++ b/docs/examples/sentiment_analysis/sentiment_analysis.ipynb
@@ -332,8 +332,8 @@
     "    # Construct the DataLoader\n",
     "    # Pad data, stack label and lengths\n",
     "    batchify_fn = nlp.data.batchify.Tuple(nlp.data.batchify.Pad(axis=0), \n",
-    "                                          nlp.data.batchify.Stack(),\n",
-    "                                          nlp.data.batchify.Stack())\n",
+    "                                          nlp.data.batchify.Stack('float32'),\n",
+    "                                          nlp.data.batchify.Stack('float32'))\n",
     "    batch_sampler = nlp.data.sampler.FixedBucketSampler(train_data_lengths,\n",
     "                                                        batch_size=batch_size,\n",
     "                                                        num_buckets=bucket_num,\n",
