Improve imports structure (#248)
* Fix imports

* Fix language_model.ipynb html

--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -243,7 +243,7 @@
     "We train the model using truncated [back-propagation-through-time (BPTT)](https://en.wikipedia.org/wiki/Backpropagation_through_time) . We backpropagate\n",
     "for 35 time steps using stochastic gradient descent with the learning rate.\n",
     "\n",
-    "<div style=\"width: 500px;\">![bptt](https://upload.wikimedia.org/wikipedia/commons/e/ee/Unfold_through_time.png)</div>"
+    "<img src=https://upload.wikimedia.org/wikipedia/commons/e/ee/Unfold_through_time.png width=\"500\">"
    ]
   },
   {
