--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -447,7 +447,7 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "moses_tokenizer = nlp.data.NLTKMosesTokenizer()\n",
+    "moses_tokenizer = nlp.data.SacreMosesTokenizer()\n",
     "\n",
     "sherlockholmes_val = nlp.data.LanguageModelDataset('sherlockholmes.valid.txt',\n",
     "                                        sample_splitter=nltk.tokenize.sent_tokenize,\n",
