--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -316,7 +316,7 @@
     "        if val_L < best_val:\n",
     "            best_val = val_L\n",
     "            test_L = evaluate(model, test_data, batch_size, context[0])\n",
-    "            model.save_params('{}_{}-{}.params'.format(model_name, dataset_name, epoch))\n",
+    "            model.save_parameters('{}_{}-{}.params'.format(model_name, dataset_name, epoch))\n",
     "            print('test loss %.2f, test ppl %.2f'%(test_L, math.exp(test_L)))\n",
     "        else:\n",
     "            lr = lr*0.25\n",
