--- a/docs/examples/word_embedding/word_embedding_training.ipynb
+++ b/docs/examples/word_embedding/word_embedding_training.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "The previous example has introduced how to load pre-trained word embeddings\n",
-    "from a set of sources included in the Gluon NLP toolkit. It was shown how make\n",
+    "from a set of sources included in the GluonNLP toolkit. It was shown how make\n",
     "use of the word vectors to find the top most similar words of a given words or\n",
     "to solve the analogy task.\n",
     "\n",
@@ -31,7 +31,7 @@
     "cases as possible given just ‘a’, ‘b’, ‘c’. For instance, “man : woman :: son :\n",
     "daughter” is an analogy.\n",
     "\n",
-    "The Gluon NLP toolkit includes a set of popular *similarity* and *analogy* task\n",
+    "The GluonNLP toolkit includes a set of popular *similarity* and *analogy* task\n",
     "datasets as well as helpers for computing the evaluation scores. Here we show\n",
     "how to make use of them.\n"
    ]
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We first load pretrained FastText word embeddings."
+    "We first load pre-trained FastText word embeddings."
    ]
   },
   {
@@ -142,7 +142,7 @@
    "source": [
     "### Similarity evaluator\n",
     "\n",
-    "The Gluon NLP toolkit includes a `WordEmbeddingSimilarity`  block, which predicts similarity score between word pairs given an embedding matrix."
+    "The GluonNLP toolkit includes a `WordEmbeddingSimilarity`  block, which predicts similarity score between word pairs given an embedding matrix."
    ]
   },
   {
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We restrict ourselves here to the first (most frequent) 300000 words of the pretrained embedding as well as all tokens that occur in the evaluation datasets as possible answers to the analogy questions."
+    "We restrict ourselves here to the first (most frequent) 300000 words of the pre-trained embedding as well as all tokens that occur in the evaluation datasets as possible answers to the analogy questions."
    ]
   },
   {
@@ -1310,13 +1310,6 @@
     "print('Spearman rank correlation on {} pairs of {}: {}'.format(\n",
     "    len(words1), wordsim353.__class__.__name__, sr.correlation.round(3)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
