--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -4,18 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Language Modeling using NLP Toolkit"
+    "# Language Modeling using GluonNLP"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we will go through an example of using Gluon NLP Toolkit to \n",
+    "A statistical model is simple a probability distribution over sequences of words or characters [1].\n",
+    "In this tutorial, we'll restrict our attention to word-based language models.\n",
+    "Given a reliable language model we can answer questions like \n",
+    "*which among the following strings are we more likely to encounter?*\n",
     "\n",
-    "1. define language model architecture, and train a standard LSTM language model;\n",
-    "2. use your own dataset to train the model; \n",
-    "3. and use the pre-trained state-of-the-art languague models in Gluon NLP Toolkit. "
+    "1. 'On Monday, Mr. Lamar’s “DAMN.” took home an even more elusive honor, one that may never have even seemed within reach: the Pulitzer Prize\" \n",
+    "1. \"Frog zealot flagged xylophone the bean wallaby anaphylaxis extraneous porpoise into deleterious carrot banana apricot.\"\n",
+    "\n",
+    "Even if we've never seen either of these sentences in our entire lives, and even though no rapper has previously been awarded a Pulitzer Prize, we wouldn't be shocked to see the first sentence in the New York Times. By comparison, we can all agree that the second sentence, consisting of incoherent babble, is comparatively unlikely. \n",
+    "A statistical language model can assign precise probabilities to each string of words.\n",
+    "\n",
+    "Given a large corpus of text, we can estimate (i.e., train) a language model $\\hat{p}(x_1, ..., x_n)$. And given such a model, we can sample strings $\\mathbf{x} \\sim \\hat{p}(x_1, ..., x_n)$, generating new strings according to their estimated probability. Among other useful applications, we can use language models to score candidate transcriptions from speech recognition models, given preference to sentences that seem more probable (at the expense of those deemed anomalous).\n",
+    "\n",
+    "These days recurrent neural networks (RNNs) are the preferred method for LM. In this notebook, we will go through an example of using GluonNLP to (i) implement a typical LSTM language model architecture, (ii) train the language model on a corpus of real data; and (iii) bring in your own dataset for training; and (iv) grab off-the-shelf pre-trained state-of-the-art languague models (i.e., AWD lanaguge model) using GluonNLP."
    ]
   },
   {
@@ -24,13 +33,17 @@
    "source": [
     "## Language model definition - one sentence\n",
     "\n",
-    "A Language model tries to predict the next word given the previous ones.\n",
+    "The standard approach to language modeling consists of training a model that given a trailing window of text, predicts  the next word in the sequence. When we train the model we feed in the inputs $x1, x_2, ...$ and try at each time step to predict the corresponding next word $x_2, ..., x_{n+1}$. To generate text from a language model, we can iteratively predict the next word, and then feed this word as the input to the model at the subsequent time step.\n",
     "\n",
-    "<img src=language_model_intro.png width=\"500\">\n",
+    "<img src=\"https://gluon.mxnet.io/_images/recurrent-lm.png\" style=\"width: 500px;\"/>\n",
+    "\n",
     "\n",
     "## Train your own language model\n",
+    "Now let's step through how to train your own language model using GluonNLP.\n",
     "\n",
-    "### Preparation"
+    "\n",
+    "### Preparation\n",
+    "We'll start by taking care of our basic dependencies and setting up our environment"
    ]
   },
   {
@@ -251,10 +264,12 @@
    "source": [
     "#### Training loop\n",
     "\n",
-    "We train the model using truncated [back-propagation-through-time (BPTT)](https://en.wikipedia.org/wiki/Backpropagation_through_time) . We backpropagate\n",
-    "for 35 time steps using stochastic gradient descent with the learning rate.\n",
+    "Our loss function will be the standard cross-entropy loss function used for multiclass classification,\n",
+    "applied at each time step to compare our predictions to the true next word in the sequence.\n",
+    "We can calculate gradients with respect to our parameters using truncated [back-propagation-through-time (BPTT)](https://en.wikipedia.org/wiki/Backpropagation_through_time). \n",
+    "In this case, we'll backpropagate for $35$ time steps, updating our weights with stochastic gradient descent with the learning rate of $20$, hyperparameters that we chose earlier in the notebook.\n",
     "\n",
-    "<img src=https://upload.wikimedia.org/wikipedia/commons/e/ee/Unfold_through_time.png width=\"500\">"
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/e/ee/Unfold_through_time.png\" width=\"500\">"
    ]
   },
   {
@@ -407,7 +422,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use your own dataset"
+    "## Use your own dataset\n",
+    "\n",
+    "When we train a language model, we fit to the statistics of a given dataset. \n",
+    "While many papers focus on a few standard datasets, such as WikiText or the Penn Tree Bank,\n",
+    "that's just to provide a standard benchmark for the purpose of comparing models against each other.\n",
+    "In general, for any given use case, you'll want to train your own language model using a dataset of your choosing.\n",
+    "Here, for demonstration, we'll grab some `.txt` files corresponding to Sherlock Holmes novels."
    ]
   },
   {
@@ -526,14 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use pretrained state-of-the-art language models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Use AWD LSTM language model\n",
+    "## Use pre-trained AWD LSTM language model\n",
     "\n",
     "AWD LSTM language model is the state-of-the-art RNN language model [1]. The main technique is to add weight-dropout on the recurrent hidden to hidden matrices to prevent the overfitting from occurring on the recurrent connections."
    ]
@@ -542,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load vocabulary and pretrained model"
+    "### Load vocabulary and pre-trained model"
    ]
   },
   {
@@ -588,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Evaluate the pretrained model on val and test datasets"
+    "### Evaluate the pre-trained model on val and test datasets"
    ]
   },
   {
@@ -616,7 +630,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use Cache LSTM language model\n",
+    "## Use Cache LSTM language model\n",
     "\n",
     "Cache LSTM language model [2] adds a cache-like memory to neural network language models, e.g., AWD LSTM language model. It exploits the hidden outputs to define a probability distribution over the words in the cache. It generates the state-of-the-art results in inference time.\n",
     "\n",
@@ -627,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load pretrained model and define hyperparameters"
+    "### Load pre-trained model and define hyperparameters"
    ]
   },
   {
@@ -676,7 +690,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Define specific get_batch and evaluation for cache model"
+    "### Define specific get_batch and evaluation for cache model"
    ]
   },
   {
@@ -738,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Evaluate the pretrained model on val and test datasets"
+    "### Evaluate the pre-trained model on val and test datasets"
    ]
   },
   {
@@ -791,8 +805,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Showcase with language model, we already support embedding training, sentiment analysis, beam search, and NMT in a similar easy-to-use fashion, and more is on the way.\n",
-    "- Gluon NLP Toolkit provides high-level APIs that could drastically simplify the development process of modeling for NLP tasks.\n",
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example, we see that:\n",
+    "- GluonNLP Toolkit provides high-level APIs that could drastically simplify the development process of modeling for NLP tasks.\n",
     "- Low-level APIs in NLP Toolkit enables easy customization.\n",
     "\n",
     "Documentation can be found at http://gluon-nlp.mxnet.io/index.html\n",
