fix ppl reporting for training on multi gpu (#365)
* fix ppl reporting for training on multi gpu

The loss is added n times per iteration where n is number of GPUs

* Update language_model.ipynb

--- a/docs/examples/language_model/language_model.ipynb
+++ b/docs/examples/language_model/language_model.ipynb
@@ -300,8 +300,8 @@
     "                for j, (X, y, h) in enumerate(zip(data_list, target_list, hiddens)):\n",
     "                    output, h = model(X, h)\n",
     "                    batch_L = loss(output.reshape(-3, -1), y.reshape(-1,))\n",
-    "                    L = L + batch_L.as_in_context(context[0]) / X.size\n",
-    "                    Ls.append(batch_L / X.size)\n",
+    "                    L = L + batch_L.as_in_context(context[0]) / (len(context) * X.size)\n",
+    "                    Ls.append(batch_L / (len(context) * X.size))\n",
     "                    hiddens[j] = h\n",
     "            L.backward()\n",
     "            grads = [p.grad(x.context) for p in parameters for x in data_list]\n",
